# insaneSums

./: CMakeLists.txt  cmake-debug.bat  conanfile.txt  vs2019-debug.bat
res/: res.aps  res.qrc  res.rc
res/forms/: aboutdialog.ui  mainwindow.ui
res/images/: logo.xcf
src/: aboutdialog.cpp  aboutdialog.h  batchwindow.cpp  batchwindow.h  cihash.cpp  cihash.h  main.cpp  mainwindow.cpp  mainwindow.h
